cards placed correctly

--- a/index.html
+++ b/index.html
@@ -12,30 +12,36 @@
 </head>
 
 <body>
-    <div id="testcard">
-        <img id="thumb" crossorigin="anonymous" src="images/C0691.jpg" />
-        <div id="right">
-
-            <h2>Dimitrios Papadoupolos</h2>
-            <h2>Volunteer</h2>
-            <h3>member since 2015</h3>
-        </div>
-        <img id="header" src="images/kwwcc.jpeg" />
-    </div>
     coordinates :
     <div id="coordinates">0</div>
     <div id="cards">
         <div id="card1" class="card">
-            <img id="header" class="rotate90" src="images/kwwcc.jpeg" />
-
-            <img id="thumb" crossorigin="anonymous" class="rotate180" src="images/C0691.jpg" />
-            <h2 class="rotate90">KW Woodworking and Craft Centre</h2>
-            <h3>Norm Ross</h3>
+            <div class="rotate90">
+                <div id="testcard" class="cardbody">
+                    <img class="thumb" crossorigin="anonymous" src="images/C0691.jpg" />
+                    <div class="details">
+                        <h2>Norm Ross</h2>
+                        <h2>Volunteer</h2>
+                        <h3>member since 2013</h3>
+                    </div>
+                    <img class="header" src="images/kwwcc.jpeg" />
+                </div>
+            </div>
         </div>
-        <div id="card2" class="card"></div>
+        <div id="card2" class="card">
+            <div class="rotate90">
+                <div id="testcard" class="cardbody">
+                    <img class="thumb" crossorigin="anonymous" src="images/C0691.jpg" />
+                    <div class="details">
+                        <h2>Windekind Buteau-Duitschaever</h2>
+                        <h2>Volunteer</h2>
+                        <h3>member since 2015</h3>
+                    </div>
+                    <img class="header" src="images/kwwcc.jpeg" />
+                </div>
+            </div>
+        </div>
     </div>
-    coordinates :
-    <div id="coordinates">0</div>
 </body>
 
 </html>
